--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Fukurou-молодая компания, внимательно отслеживающая и использующая последние достижения в автомобильной индустрии. Fukurou F1 - самые яркие из всех галогеновых ламп стандартной мощности.">
     <title>Fukurou</title>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
