--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Fukurou-молодая компания, внимательно отслеживающая и использующая последние достижения в автомобильной индустрии. Fukurou F1 - самые яркие из всех галогеновых ламп стандартной мощности.">
     <title>Fukurou</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
