--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Fukurou-молодая компания, внимательно отслеживающая и использующая последние достижения в автомобильной индустрии. Fukurou F1 - самые яркие из всех галогеновых ламп стандартной мощности.">
+    <meta name="description" content="Fukurou - официальный сайт компании">
     <title>Fukurou</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Yandex.Metrika counter -->
