--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="Fukurou - официальный сайт компании">
-    <title>Fukurou</title>
+    <meta name="description" content="
+Fukurou-молодая компания, внимательно отслеживающая и использующая последние достижения в автомобильной индустрии. Fukurou F1 - самые яркие из всех галогеновых ламп стандартной мощности.">
+    <title>Fukurou | Автолампы hi-end |Официальный сайт</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
@@ -23,9 +24,13 @@
     <!-- /Yandex.Metrika counter -->
   </head>
   <body>
+  <!--googleoff: all-->
+  <noindex>
     <div id="app">
       <router-view/>
     </div>
+  </noindex>
+  <!--/googleoff: all-->
     <!-- built files will be auto injected -->
   </body>
 </html>
