--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="description" content="
 Fukurou-молодая компания, внимательно отслеживающая и использующая последние достижения в автомобильной индустрии. Fukurou F1 - самые яркие из всех галогеновых ламп стандартной мощности.">
     <title>Fukurou | Автолампы hi-end |Официальный сайт</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-146049596-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-146049596-2');
+    </script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
